<resources>
    <string name="app_name">Carona UESC</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--Toolbar menu-->
    <string name="action_logout">Sair</string>

    <!--Activities adn fragments titles-->
    <string name="title_activity_recovery">Recuperação de senha</string>
    <string name="title_activity_login">Login</string>
    <string name="title_signup">Cadastro</string>
    <string name="title_activity_crop">Cortar imagem</string>
    <string name="title_activity_signup">Cadastro</string>
    <string name="title_fragment_account">Configurações de conta</string>
    <string name="title_fragment_available_rides">Caronas disponíveis</string>

    <!--Drawer menu-->
    <string name="item_menu_available_rides">Caronas disponíveis</string>
    <string name="item_menu_my_profile">Meu perfil</string>
    <string name="item_menu_my_ride">Minha carona</string>
    <string name="item_menu_change_vehicle">Alterar veículo</string>
    <string name="item_menu_my_evaluations">Minhas avaliações</string>
    <string name="item_menu_ride_history">Histórico de caronas</string>
    <string name="item_menu_account_settings">Configurações de conta</string>
    <string name="item_menu_donate">Doação</string>
    <string name="item_menu_send_email">Críticas e sugestões</string>
    <string name="help_us">Ajude-nos</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Senha</string>
    <string name="action_login">Entrar</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">E-mail inválido</string>
    <string name="error_invalid_password">Senha muito curta</string>
    <string name="error_incorrect_password">Senha incorreta</string>
    <string name="error_field_required">Campo obrigatório</string>
    <string name="forgot_password">Esqueceu sua senha?</string>
    <string name="dont_you_have_an_account">Não possui conta?</string>
    <string name="sign_up">Cadastre-se</string>

    <!--Dialogs-->
    <string name="dialog_action_yes">Sim</string>
    <string name="dialog_action_no">Não</string>
    <string name="dialog_action_cancel">Cancelar</string>
    <string name="dialog_action_ok">OK</string>
    <string name="dialog_message_logout">Tem certeza que deseja sair?</string>
    <string name="dialog_title_permission">Permissão requerida</string>
    <string name="dialog_permission_agree_button">Aceitar</string>
    <string name="dialog_permission_disagree_button">Negar</string>

    <!--Hints-->
    <string name="hint_first_name">Nome</string>
    <string name="hint_last_name">Sobrenome</string>
    <string name="hint_email_required">E-mail*</string>
    <string name="hint_email">E-mail</string>
    <string name="hint_password_required">Senha*</string>
    <string name="hint_password_again">Repita a senha</string>
    <string name="hint_birth_date">Data de nascimento</string>
    <string name="lb_gender">Sexo</string>
    <string name="err_msg_must_select_one">Selecione uma opção</string>
    <string name="lb_radio_male">Masculino</string>
    <string name="lb_radio_female">Feminino</string>
    <string name="hint_city">Cidade</string>
    <string name="hint_phone">Telefone</string>
    <string name="hint_whatsapp">Whatsapp</string>
    <string name="hint_singup">Cadastrar!</string>
    <string name="hint_neigborhood">Bairro</string>

    <!--Errors-->
    <string name="err_msg_empty_name">Insira um nome</string>
    <string name="err_msg_empty_last_name">Insira um sobrenome</string>
    <string name="err_msg_short_name">O nome deve conter 2 caracteres ou mais</string>
    <string name="err_msg_short_last_name">O sobrenome deve conter 2 caracteres ou mais</string>
    <string name="err_msg_empty_city">Insira a cidade</string>
    <string name="err_msg_short_city">A cidade deve conter 4 caracteres ou mais</string>
    <string name="err_msg_short_neighborhood">O bairro deve conter 4 caratedes ou mais</string>
    <string name="err_msg_empty_neighborhood">Insira um bairro</string>
    <string name="err_msg_invalid_phone">Telefone inválido</string>
    <string name="err_msg_invalid_whatsapp">Número de Whatsapp inválido</string>
    <string name="err_msg_dont_match_password">As senhas não são iguais</string>
    <string name="err_msg_short_password">A senha deve conter de 6 a 22 caracteres</string>
    <string name="err_msg_empty_email">Insira um e-mail</string>
    <string name="err_msg_invalid_email">E-mail inválido</string>
    <string name="err_msg_existing_email">Este e-mail já está cadastrado</string>
    <string name="err_msg_server_fail">Falha ao verificar e-mail. Tente mais tarde.</string>
    <string name="lb_passenger">Caroneiro</string>
    <string name="hint_save">Salvar</string>
    <string name="action_recovery">Recuperar</string>
    <string name="dialog_message_recovey_email_sent_confirmation">Um e-mail de redefinição de senha foi enviado</string>
    <string name="no_ride_available">Não existem caronas disponíveis no momento.</string>
    <string name="failed_load_rides">Não foi possível carregar as caronas. Tente novamente mais tarde.</string>
    <string name="failed_load_more_rides">Não foi possível carregar mais caronas. Tente novamente mais tarde.</string>
    <string name="title_fragment_change_vehicle">Alterar veículo</string>
    <string name="action_add_vehicle">Adicionar veículo</string>
    <string name="progress_wait">Aguarde</string>
    <string name="progress_loading_rides">Carregando caronas</string>
    <string name="the_server_is_not_okay">O servidor se comportou de uma forma estranha</string>
    <string name="progress_saving_changes">Salvando alterações</string>
    <string name="failed_saving_changes">Falha ao salvar alterações</string>
    <string name="hint_brand">Marca</string>
    <string name="hint_model">Modelo</string>
    <string name="hint_plate">Placa</string>
    <string name="lb_vehicle_color">Cor do veículo</string>
    <string name="hint_color_name">Nome da cor</string>
    <string name="lb_air_conditioner">Ar condicionado</string>
    <string name="title_activity_vehicle_settings">Configuração de veículo</string>
    <string name="lb_vehicle_type">Tipo de veículo</string>
    <string name="adding_vehicle">Adicionando veículo</string>
    <string name="error_invalid_plate">Placa inválida</string>
    <string name="lb_num_doors">Número de portas</string>
    <string name="lb_num_sits">Número de assentos</string>
    <string name="lb_gallery">Galeria</string>
    <string name="progress_loading_vehicles">Carregando lista de veículos</string>
    <string name="cant_remove_default_vehicle">Não pode deletar um veículo em uso!</string>
    <string name="removing_vehicle">Removendo veículo</string>
    <string name="success_removing_vehicle">Veículo removido com sucesso</string>
    <string name="failed_removing_vehicle">Falha ao remover veículo</string>
    <string name="title_edit_vehicle">Alterar veículo</string>
    <string name="show_evaluations">VER AVALIAÇÕES</string>
    <string name="ride_enter">Entrar</string>
    <string name="ride_exit">Sair</string>
    <string name="show_vehicle_details">VER DETALHES</string>

</resources>
